--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/example/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    - export DEPLOYPATH=/home2/cordwe98/projeto-final-pw2 
+    - /bin/cp -R  $DEPLOYPATH
